refactoring and add more tests
