# routes/api.php
@@ -8,13 +8,11 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login'])->name('login');
-Route::middleware(['auth:sanctum',])->group(function () {
-    Route::post('/logout', [AuthController::class, 'logout']);
-    Route::get('/auth-user', [AuthController::class, 'authUser']);
-});
-
 
 Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::get('/me', [AuthController::class, 'me']);
+
     Route::apiResource('tasks', TaskController::class);
     Route::post('/tasks/{id}/complete', [TaskController::class, 'complete'])
         ->name('tasks.complete');
